# Lanstreaming

./: .gitignore  CLAUDE.md  CMakeLists.txt  lancast-plan.md
.github/workflows/: build.yml
cmake/: FindFFmpeg.cmake  PlatformSetup.cmake
packaging/: Info.plist  build-appimage.sh  build-dmg.sh  lancast.desktop
src/: main.cpp
src/app/: client_session.cpp  client_session.h  host_session.cpp  host_session.h  launcher_ui.cpp  launcher_ui.h
src/capture/: audio_capture.h  audio_capture_mac.h  audio_capture_mac.mm  audio_capture_pulse.cpp  audio_capture_pulse.h  audio_capture_wasapi.cpp  audio_capture_wasapi.h  capture_source.h  mic_capture_pulse.cpp  mic_capture_pulse.h  mic_capture_wasapi.cpp  mic_capture_wasapi.h  screen_capture_dxgi.cpp  screen_capture_dxgi.h  screen_capture_mac.h  screen_capture_mac.mm  screen_capture_x11.cpp  screen_capture_x11.h
src/core/: clock.h  ffmpeg_ptrs.h  jthread.h  logger.cpp  logger.h  ring_buffer.h  thread_safe_queue.h  types.h
src/decode/: audio_decoder.cpp  audio_decoder.h  video_decoder.cpp  video_decoder.h
src/encode/: audio_encoder.cpp  audio_encoder.h  video_encoder.cpp  video_encoder.h
src/net/: client.cpp  client.h  packet_assembler.cpp  packet_assembler.h  packet_fragmenter.cpp  packet_fragmenter.h  protocol.h  server.cpp  server.h  socket.cpp  socket.h  winsock_init.h
src/render/: audio_player.cpp  audio_player.h  sdl_renderer.cpp  sdl_renderer.h
tests/: CMakeLists.txt  test_audio_codec.cpp  test_large_frame_roundtrip.cpp  test_packet_roundtrip.cpp  test_phase5_protocol.cpp  test_protocol.cpp  test_ring_buffer.cpp  test_video_codec.cpp
